last commit before lunchm working on mobile

--- a/index.html
+++ b/index.html
@@ -42,73 +42,87 @@
 
       <img class="banner" src="img/banner.jpg" alt="Pots of soup">
 
-      <h2>Content1</h2>
+      <h2>Our Mission</h2>
 
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam esse tempore dolore officia hic natus expedita facilis, vitae quo est totam maiores blanditiis eveniet rem molestias amet! 
-        Debitis, odio beatae. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum ipsa voluptatum temporibus amet delectus nisi nihil, dolores, 
-        possimus sed maxime aliquam aut. Delectus, rerum assumenda. Dolorum atque quis porro quia? bacobn Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis architecto 
-        necessitatibus esse iste quod, adipisci at natus, corrupti minima rerum rem, reprehenderit libero quidem repellat impedit nostrum dolorum magni consequatur Lorem ipsum dolor sit amet, 
-        consectetur adipisicing elit. Obcaecati hic quidem ipsam rem vitae impedit minus eligendi. Ipsa sed ex iure at asperiores praesentium, cum, perspiciatis, facilis itaque consectetur adipisci!</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam esse tempore dolore officia hic natus
+        expedita facilis, vitae quo est totam maiores blanditiis eveniet rem molestias amet!
+        Debitis, odio beatae. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum ipsa voluptatum temporibus
+        amet delectus nisi nihil, dolores,
+        possimus sed maxime aliquam aut. Delectus, rerum assumenda. Dolorum atque quis porro quia? bacobn Lorem ipsum
+        dolor, sit amet consectetur adipisicing elit. Perspiciatis architecto
+        necessitatibus esse iste quod, adipisci at natus, corrupti minima rerum rem, reprehenderit libero quidem
+        repellat impedit nostrum dolorum magni consequatur Lorem ipsum dolor sit amet,
+        consectetur adipisicing elit. Obcaecati hic quidem ipsam rem vitae impedit minus eligendi. Ipsa sed ex iure at
+        asperiores praesentium, cum, perspiciatis, facilis itaque consectetur adipisci!</p>
     </header>
 
-    <!-- <section class="space-images">
-      <img src="img/blast.png" class="blast" alt="Rocket blasting off">
-      <img src="img/sky.png" class="sky" alt="Space sky image">
-      <img src="img/launch.png" class="launch" alt="Launching rocket">
-    </section> -->
+    <section class="programs">
 
-    <section class="section1">
+      <img class="programs-image" src="img/programs.png" alt="open hands symbol">  
 
-      <h3>This is a header!</h3>
+      <h3>Programs</h3>
 
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam esse tempore dolore officia hic natus expedita facilis, vitae quo est totam maiores blanditiis eveniet rem molestias amet! 
-          Debitis, odio beatae. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum ipsa voluptatum temporibus amet delectus nisi nihil, dolores, 
-          possimus sed maxime aliquam aut. Delectus, rerum assumenda. Dolorum atque quis porro quia? bacobn Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis architecto 
-          necessitatibus esse iste quod, adipisci at natus, corrupti minima rerum rem, reprehenderit libero quidem repellat impedit nostrum dolorum magni consequatur Lorem ipsum dolor sit amet, 
-          consectetur adipisicing elit. Obcaecati hic quidem ipsam rem vitae impedit minus eligendi. Ipsa sed ex iure at asperiores praesentium, cum, perspiciatis, facilis itaque consectetur adipisci!</p>
-      </header></p>
-
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam esse tempore dolore officia hic natus expedita facilis, vitae quo est totam maiores blanditiis eveniet rem molestias amet! 
-          Debitis, odio beatae. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum ipsa voluptatum temporibus amet delectus nisi nihil, dolores, 
-          possimus sed maxime aliquam aut. Delectus, rerum assumenda. Dolorum atque quis porro quia? bacobn Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis architecto 
-          necessitatibus esse iste quod, adipisci at natus, corrupti minima rerum rem, reprehenderit libero quidem repellat impedit nostrum dolorum magni consequatur Lorem ipsum dolor sit amet, 
-          consectetur adipisicing elit. Obcaecati hic quidem ipsam rem vitae impedit minus eligendi. Ipsa sed ex iure at asperiores praesentium, cum, perspiciatis, facilis itaque consectetur adipisci!</p>
-      </header></p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam esse tempore dolore officia hic natus
+        expedita facilis, vitae quo est totam maiores blanditiis eveniet rem molestias amet!
+        Debitis, odio beatae. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum ipsa voluptatum temporibus
+        amet delectus nisi nihil, dolores,
+        possimus sed maxime aliquam aut. Delectus, rerum assumenda. Dolorum atque quis porro quia? bacobn Lorem ipsum
+        dolor, sit amet consectetur adipisicing elit. Perspiciatis architecto
+        necessitatibus esse iste quod, adipisci at natus, corrupti minima rerum rem, reprehenderit libero quidem
+        repellat impedit nostrum dolorum magni consequatur Lorem ipsum dolor sit amet,
+        consectetur adipisicing elit. Obcaecati hic quidem ipsam rem vitae impedit minus eligendi. Ipsa sed ex iure at
+        asperiores praesentium, cum, perspiciatis, facilis itaque consectetur adipisci!
+      </p>
     </section>
 
-    <section class="section2">
-      <div class="section2-text">
-        <h3>This is also a header!</h3>
+    
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam esse tempore dolore officia hic natus expedita facilis, vitae quo est totam maiores blanditiis eveniet rem molestias amet! 
-            Debitis, odio beatae. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum ipsa voluptatum temporibus amet delectus nisi nihil, dolores, 
-            possimus sed maxime aliquam aut. Delectus, rerum assumenda. Dolorum atque quis porro quia? bacobn Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis architecto 
-            necessitatibus esse iste quod, adipisci at natus, corrupti minima rerum rem, reprehenderit libero quidem repellat impedit nostrum dolorum magni consequatur Lorem ipsum dolor sit amet, 
-            consectetur adipisicing elit. Obcaecati hic quidem ipsam rem vitae impedit minus eligendi. Ipsa sed ex iure at asperiores praesentium, cum, perspiciatis, facilis itaque consectetur adipisci!</p>
-        </header></p>
+    <section class="get-involved">
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam esse tempore dolore officia hic natus expedita facilis, vitae quo est totam maiores blanditiis eveniet rem molestias amet! 
-            Debitis, odio beatae. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum ipsa voluptatum temporibus amet delectus nisi nihil, dolores, 
-            possimus sed maxime aliquam aut. Delectus, rerum assumenda. Dolorum atque quis porro quia? bacobn Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis architecto 
-            necessitatibus esse iste quod, adipisci at natus, corrupti minima rerum rem, reprehenderit libero quidem repellat impedit nostrum dolorum magni consequatur Lorem ipsum dolor sit amet, 
-            consectetur adipisicing elit. Obcaecati hic quidem ipsam rem vitae impedit minus eligendi. Ipsa sed ex iure at asperiores praesentium, cum, perspiciatis, facilis itaque consectetur adipisci!</p>
-        </header></p>
+        <img class="get-involved-image" src="img/get-involved.png" alt="handshake forming a heart">
 
-        <div class="btn">
-          Sign Up
-        </div>
-      </div>
+        <h3>Get Involved</h3>
 
-      <!-- <div class="walk-img">
-        <img src="img/space-walk.png" alt="Space walking astronaut">
-
-      </div> -->
-
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam esse tempore dolore officia hic natus
+          expedita facilis, vitae quo est totam maiores blanditiis eveniet rem molestias amet!
+          Debitis, odio beatae. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum ipsa voluptatum
+          temporibus amet delectus nisi nihil, dolores,
+          possimus sed maxime aliquam aut. Delectus, rerum assumenda. Dolorum atque quis porro quia? bacobn Lorem ipsum
+          dolor, sit amet consectetur adipisicing elit. Perspiciatis architecto
+          necessitatibus esse iste quod, adipisci at natus, corrupti minima rerum rem, reprehenderit libero quidem
+          repellat impedit nostrum dolorum magni consequatur Lorem ipsum dolor sit amet,
+          consectetur adipisicing elit. Obcaecati hic quidem ipsam rem vitae impedit minus eligendi. Ipsa sed ex iure
+          at asperiores praesentium, cum, perspiciatis, facilis itaque consectetur adipisci!
+        </p>
     </section>
 
-    <footer>
-      <p>Copyright Souper Douper 2019</p>
-    </footer>
+    
+
+    <section class="donate">
+
+      <img class="donate-image" src="img/donate.png" alt="hand donating coins">
+
+      <h3>Donate</h3>
+
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam esse tempore dolore officia hic natus
+        expedita facilis, vitae quo est totam maiores blanditiis eveniet rem molestias amet!
+        Debitis, odio beatae. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum ipsa voluptatum temporibus
+        amet delectus nisi nihil, dolores,
+        possimus sed maxime aliquam aut. Delectus, rerum assumenda. Dolorum atque quis porro quia? bacobn Lorem ipsum
+        dolor, sit amet consectetur adipisicing elit. Perspiciatis architecto
+        necessitatibus esse iste quod, adipisci at natus, corrupti minima rerum rem, reprehenderit libero quidem
+        repellat impedit nostrum dolorum magni consequatur Lorem ipsum dolor sit amet,
+        consectetur adipisicing elit. Obcaecati hic quidem ipsam rem vitae impedit minus eligendi. Ipsa sed ex iure at
+        asperiores praesentium, cum, perspiciatis, facilis itaque consectetur adipisci!
+      </p>
+    </section>
+    <div class="btn">
+      Sign Up
+  </div>
+
+  <footer>
+    <p>Copyright Souper Douper 2019</p>
+  </footer>
 
   </div>
 </body>
