aligned content images

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   <div class="container">
 
-    <header class="intro">
+    <div class="intro">
 
       <img class="banner" src="img/banner.jpg" alt="Pots of soup">
 
@@ -54,11 +54,13 @@
         repellat impedit nostrum dolorum magni consequatur Lorem ipsum dolor sit amet,
         consectetur adipisicing elit. Obcaecati hic quidem ipsam rem vitae impedit minus eligendi. Ipsa sed ex iure at
         asperiores praesentium, cum, perspiciatis, facilis itaque consectetur adipisci!</p>
-    </header>
+      </div>
 
     <section class="programs">
 
-      <img class="programs-image" src="img/programs.png" alt="open hands symbol">  
+  
+      <img class="programs-image" src="img/programs.png" alt="open hands symbol">
+  
 
       <h3>Programs</h3>
 
@@ -75,28 +77,26 @@
       </p>
     </section>
 
-    
 
     <section class="get-involved">
 
-        <img class="get-involved-image" src="img/get-involved.png" alt="handshake forming a heart">
+      <img class="get-involved-image" src="img/get-involved.png" alt="handshake forming a heart">
 
-        <h3>Get Involved</h3>
+      <h3>Get Involved</h3>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam esse tempore dolore officia hic natus
-          expedita facilis, vitae quo est totam maiores blanditiis eveniet rem molestias amet!
-          Debitis, odio beatae. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum ipsa voluptatum
-          temporibus amet delectus nisi nihil, dolores,
-          possimus sed maxime aliquam aut. Delectus, rerum assumenda. Dolorum atque quis porro quia? bacobn Lorem ipsum
-          dolor, sit amet consectetur adipisicing elit. Perspiciatis architecto
-          necessitatibus esse iste quod, adipisci at natus, corrupti minima rerum rem, reprehenderit libero quidem
-          repellat impedit nostrum dolorum magni consequatur Lorem ipsum dolor sit amet,
-          consectetur adipisicing elit. Obcaecati hic quidem ipsam rem vitae impedit minus eligendi. Ipsa sed ex iure
-          at asperiores praesentium, cum, perspiciatis, facilis itaque consectetur adipisci!
-        </p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam esse tempore dolore officia hic natus
+        expedita facilis, vitae quo est totam maiores blanditiis eveniet rem molestias amet!
+        Debitis, odio beatae. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum ipsa voluptatum
+        temporibus amet delectus nisi nihil, dolores,
+        possimus sed maxime aliquam aut. Delectus, rerum assumenda. Dolorum atque quis porro quia? bacobn Lorem ipsum
+        dolor, sit amet consectetur adipisicing elit. Perspiciatis architecto
+        necessitatibus esse iste quod, adipisci at natus, corrupti minima rerum rem, reprehenderit libero quidem
+        repellat impedit nostrum dolorum magni consequatur Lorem ipsum dolor sit amet,
+        consectetur adipisicing elit. Obcaecati hic quidem ipsam rem vitae impedit minus eligendi. Ipsa sed ex iure
+        at asperiores praesentium, cum, perspiciatis, facilis itaque consectetur adipisci!
+      </p>
     </section>
 
-    
 
     <section class="donate">
 
@@ -116,15 +116,15 @@
         asperiores praesentium, cum, perspiciatis, facilis itaque consectetur adipisci!
       </p>
     </section>
-    <div class="btn">
-      Sign Up
-  </div>
+</div>
 
-  <footer>
-    <p>Copyright Souper Douper 2019</p>
-  </footer>
+<footer>
+  <p>Copyright Souper Douper 2019</p>
+  
+  <div class="btn">Sign In</div>
 
-  </div>
+</footer>
+
 </body>
 
 </html>
