--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Souper Douper</title>
+  <title>Soup Kitchen</title>
 
   <link href="https://fonts.googleapis.com/css?family=Russo+One|Ubuntu" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
@@ -24,7 +24,7 @@
 
   <header>
     <div class="header-contents">
-      <h1>Souper Douper</h1>
+      <h1>Soup Kitchen</h1>
       <nav>
         <a href="#">Home</a>
         <a href="#">About Us</a>
@@ -44,83 +44,59 @@
 
       <h2>Our Mission</h2>
 
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam esse tempore dolore officia hic natus
-        expedita facilis, vitae quo est totam maiores blanditiis eveniet rem molestias amet!
-        Debitis, odio beatae. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum ipsa voluptatum temporibus
-        amet delectus nisi nihil, dolores,
-        possimus sed maxime aliquam aut. Delectus, rerum assumenda. Dolorum atque quis porro quia? bacobn Lorem ipsum
-        dolor, sit amet consectetur adipisicing elit. Perspiciatis architecto
-        necessitatibus esse iste quod, adipisci at natus, corrupti minima rerum rem, reprehenderit libero quidem
-        repellat impedit nostrum dolorum magni consequatur Lorem ipsum dolor sit amet,
-        consectetur adipisicing elit. Obcaecati hic quidem ipsam rem vitae impedit minus eligendi. Ipsa sed ex iure at
-        asperiores praesentium, cum, perspiciatis, facilis itaque consectetur adipisci!</p>
-      </div>
-
-    <section class="programs">
-
-  
-      <img class="programs-image" src="img/programs.png" alt="open hands symbol">
-  
-
-      <h3>Programs</h3>
-
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam esse tempore dolore officia hic natus
-        expedita facilis, vitae quo est totam maiores blanditiis eveniet rem molestias amet!
-        Debitis, odio beatae. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum ipsa voluptatum temporibus
-        amet delectus nisi nihil, dolores,
-        possimus sed maxime aliquam aut. Delectus, rerum assumenda. Dolorum atque quis porro quia? bacobn Lorem ipsum
-        dolor, sit amet consectetur adipisicing elit. Perspiciatis architecto
-        necessitatibus esse iste quod, adipisci at natus, corrupti minima rerum rem, reprehenderit libero quidem
-        repellat impedit nostrum dolorum magni consequatur Lorem ipsum dolor sit amet,
-        consectetur adipisicing elit. Obcaecati hic quidem ipsam rem vitae impedit minus eligendi. Ipsa sed ex iure at
-        asperiores praesentium, cum, perspiciatis, facilis itaque consectetur adipisci!
+      <p>Our mission is simple: to feed people in need regardless of their circumstances. The Soup Kitchen provides
+        healthy and nutritious meals to all who come through our doors.
+        We feed the hungry and assist in our humble way to keep families together by providing them nourishment,
+        clothing and education. The Soup Kitchen's primary responsibility is to provide a safe, clean, uplifting
+        environment for those in need of food and fellowship.
       </p>
-    </section>
+    </div>
+
+    <div class="middle-content">
+      <section class="programs">
 
 
-    <section class="get-involved">
-
-      <img class="get-involved-image" src="img/get-involved.png" alt="handshake forming a heart">
-
-      <h3>Get Involved</h3>
-
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam esse tempore dolore officia hic natus
-        expedita facilis, vitae quo est totam maiores blanditiis eveniet rem molestias amet!
-        Debitis, odio beatae. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum ipsa voluptatum
-        temporibus amet delectus nisi nihil, dolores,
-        possimus sed maxime aliquam aut. Delectus, rerum assumenda. Dolorum atque quis porro quia? bacobn Lorem ipsum
-        dolor, sit amet consectetur adipisicing elit. Perspiciatis architecto
-        necessitatibus esse iste quod, adipisci at natus, corrupti minima rerum rem, reprehenderit libero quidem
-        repellat impedit nostrum dolorum magni consequatur Lorem ipsum dolor sit amet,
-        consectetur adipisicing elit. Obcaecati hic quidem ipsam rem vitae impedit minus eligendi. Ipsa sed ex iure
-        at asperiores praesentium, cum, perspiciatis, facilis itaque consectetur adipisci!
-      </p>
-    </section>
+        <img class="programs-image" src="img/programs.png" alt="open hands symbol">
 
 
-    <section class="donate">
+        <h3>Programs</h3>
 
-      <img class="donate-image" src="img/donate.png" alt="hand donating coins">
+        <p>At the Soup Kitchen, our mission is to provide a hand up and out of homelessness. Feed Me Hope Bakery,
+          Culinary School, and Food Truck help our guests gain the skills they need to transform their lives.
+        </p>
+      </section>
 
-      <h3>Donate</h3>
 
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam esse tempore dolore officia hic natus
-        expedita facilis, vitae quo est totam maiores blanditiis eveniet rem molestias amet!
-        Debitis, odio beatae. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum ipsa voluptatum temporibus
-        amet delectus nisi nihil, dolores,
-        possimus sed maxime aliquam aut. Delectus, rerum assumenda. Dolorum atque quis porro quia? bacobn Lorem ipsum
-        dolor, sit amet consectetur adipisicing elit. Perspiciatis architecto
-        necessitatibus esse iste quod, adipisci at natus, corrupti minima rerum rem, reprehenderit libero quidem
-        repellat impedit nostrum dolorum magni consequatur Lorem ipsum dolor sit amet,
-        consectetur adipisicing elit. Obcaecati hic quidem ipsam rem vitae impedit minus eligendi. Ipsa sed ex iure at
-        asperiores praesentium, cum, perspiciatis, facilis itaque consectetur adipisci!
-      </p>
-    </section>
-</div>
+      <section class="get-involved">
 
-<footer>
-  <p>Copyright Souper Douper 2019</p>
-</footer>
+        <img class="get-involved-image" src="img/get-involved.png" alt="handshake forming a heart">
+
+        <h3>Get Involved</h3>
+
+        <p>Volunteers are the backbone of the Soup Kitchen. Check out our various opportunities to find one that's
+          right for you! </p>
+
+      </section>
+
+
+      <section class="donate">
+
+        <img class="donate-image" src="img/donate.png" alt="hand donating coins">
+
+        <h3>Donate</h3>
+
+        <p>We rely on private donations of food and money to meet the needs of our guests. Donate <btn>online</btn>,
+          through
+
+          <btn>Pick.Click.Give</btn>, or send donations to our <btn>mailing address</btn>.
+        </p>
+      </section>
+    </div>
+  </div>
+
+  <footer>
+    <p>Copyright Soup Kitchen 2019</p>
+  </footer>
 
 </body>
 
