--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
   <link href="css/index.css" rel="stylesheet">
   <script src="index.js" async></script>
 
-  <!-- ***NEED TO FIX FAVICON LINK*** -->
-
   <link rel="shortcut icon" href="img\screen_shot_2019-02-11_at_4.37.26_pm.png" type="image/x-icon" />
 
   <!--[if lt IE 9]>
@@ -41,24 +39,21 @@
 
     <div class="intro">
 
-      <!-- <img class="banner" src="img/banner.jpg" alt="Pots of soup"> -->
-
       <!-- Carousel  -->
+
       <div id="carousel" class="carousel">
-          <div class="slides">
-            <div class="slide" data-state="active"><img class="banner" src="img/banner.jpg" alt="Pots of soup"></div>
-            <div class="slide"><img class="banner" src="img/homeless1.jpg" alt="Homeless man in suit"></div>
-            <div class="slide"><img class="banner" src="img/homeless2.jpg" alt="old man laughing"></div>
-          </div>
-          <div class="indicators">
-            <input class="indicator" name="indicator" data-slide="1" data-state="active" checked type="radio" />
-            <input class="indicator" name="indicator" data-slide="2" type="radio" />
-            <input class="indicator" name="indicator" data-slide="3" type="radio" />
-          </div>
+        <div class="slides">
+          <div class="slide" data-state="active"><img class="banner" src="img/banner.jpg" alt="Pots of soup"></div>
+          <div class="slide"><img class="banner" src="img/homeless1.jpg" alt="Homeless man in suit"></div>
+          <div class="slide"><img class="banner" src="img/homeless2.jpg" alt="old man laughing"></div>
         </div>
-
+        <div class="indicators">
+          <input class="indicator" name="indicator" data-slide="1" data-state="active" checked type="radio" />
+          <input class="indicator" name="indicator" data-slide="2" type="radio" />
+          <input class="indicator" name="indicator" data-slide="3" type="radio" />
+        </div>
+      </div>
       <h2>Our Mission</h2>
-
       <p>Our mission is simple: to feed people in need regardless of their circumstances. The Soup Kitchen provides
         healthy and nutritious meals to all who come through our doors.
         We feed the hungry and assist in our humble way to keep families together by providing them nourishment,
@@ -69,50 +64,32 @@
 
     <div class="middle-content">
       <section class="programs">
-
-
         <img class="programs-image" src="img/programs.png" alt="open hands symbol">
-
-
         <h3>Programs</h3>
-
         <p>At the Soup Kitchen, our mission is to provide a hand up and out of homelessness. Feed Me Hope Bakery,
-          Culinary School, and Food Truck help our guests gain the skills they need to transform their lives.
-        </p>
+          Culinary School, and Food Truck help our guests gain the skills they need to transform their lives.</p>
       </section>
-
 
       <section class="get-involved">
 
         <img class="get-involved-image" src="img/get-involved.png" alt="handshake forming a heart">
-
         <h3>Get Involved</h3>
-
         <p>Volunteers are the backbone of the Soup Kitchen. Check out our various opportunities to find one that's
           right for you! </p>
-
       </section>
 
-
       <section class="donate">
-
         <img class="donate-image" src="img/donate.png" alt="hand donating coins">
-
         <h3>Donate</h3>
-
         <p>We rely on private donations of food and money to meet the needs of our guests. Donate <a href="#">online</a>,
-          through
-
-          <a href="#">Pick.Click.Give</a>, or send donations to our <a href="#">mailing address</a>.
+          through<a href="#">Pick.Click.Give</a>, or send donations to our <a href="#">mailing address</a>.
         </p>
       </section>
     </div>
   </div>
-
   <footer>
     <p>Copyright Soup Kitchen 2019</p>
   </footer>
-
 </body>
 
 </html>
