--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <header>
     <div class="header-contents">
-      <h1>Soup Kitchen</h1>
+      <h1>Souper Douper</h1>
       <nav>
         <a href="#">Home</a>
         <a href="#">About Us</a>
